[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ReadyScreen" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0

[node name="Panel" type="Panel" parent="ReadyScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ReadyScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 28.0
margin_right = -21.0
margin_bottom = -65.0

[node name="ReadyButton" type="Button" parent="ReadyScreen"]
anchor_left = 0.5
anchor_top = 0.78
anchor_right = 0.5
anchor_bottom = 0.78
margin_left = -61.0
margin_right = 62.0
margin_bottom = 35.0
text = "Ready!"

[node name="ConnectingScreen" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0

[node name="Panel" type="Panel" parent="ConnectingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="ConnectingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -20.0
margin_right = 44.0
margin_bottom = 20.0
text = "Connecting..."

[node name="MatchMakingScreen" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0

[node name="Panel" type="Panel" parent="MatchMakingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="MatchMakingScreen"]
anchor_left = 0.5
anchor_top = 0.78
anchor_right = 0.5
anchor_bottom = 0.78
margin_left = -61.5
margin_top = -35.0
margin_right = 61.5
text = "Start Match"

[node name="RichTextLabel" type="RichTextLabel" parent="MatchMakingScreen"]
margin_left = 19.0
margin_top = 84.0
margin_right = 107.0
margin_bottom = 124.0
text = "Name:"

[node name="Username" type="LineEdit" parent="MatchMakingScreen"]
margin_left = 109.0
margin_top = 78.0
margin_right = 214.0
margin_bottom = 102.0
text = "Name"

[connection signal="pressed" from="ReadyScreen/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="MatchMakingScreen/Button" to="." method="_on_Button_pressed"]
